# AKParabolicPutSelling

./: .gitignore  README.md  pyproject.toml
holy_grail_ib/: .env  main.py  requirements.txt
holy_grail_ib/alerts/: notification.py
holy_grail_ib/config/: criteria.py
holy_grail_ib/data/: fmp_client.py
holy_grail_ib/options/: __init__.py  greeks_calculator.py  strike_selector.py
holy_grail_ib/screening/: business_quality.py
holy_grail_ib/signals/: perfect_storm.py
holy_grail_ib/strategy/: entry_engine.py
holy_grail_ib/trading/: order_manager.py
