[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holy_grail_ib"
version = "0.1.0"
description = "Adam Khoo's Cash-Secured Put Strategy Implementation"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ib_insync>=0.9.86,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.8.5,<4.0.0",
    "pandas>=2.0.3,<3.0.0",
    "numpy>=1.24.3,<2.0.0",
    "scipy>=1.11.1,<2.0.0",
    "redis>=4.6.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.1.1,<3.0.0",
    "pydantic-settings>=2.0.2,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "asyncio-throttle>=1.0.2,<2.0.0",
    "schedule>=1.2.0,<2.0.0",
    "aiofiles>=23.1.0,<24.0.0",
    "twilio>=8.5.0,<9.0.0"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.22.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.3.1",
    
    # Code Quality
    "black==24.3.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "flake8-annotations==3.0.0",
    "flake8-docstrings==1.8.0",
    "mypy==1.7.0",
    
    # Type Stubs
    "types-requests==2.31.0",
    "types-aiohttp==23.4.0",
    "types-python-dateutil==2.8.19",
    "types-pyyaml==6.0.12",
    
    # Documentation
    "sphinx==7.1.0",
    "sphinx-rtd-theme==1.2.0",
    "sphinx-autoapi==1.8.0",
    "sphinx-click==5.0.1",
    
    # Development Tools
    "pre-commit==3.3.0",
    "ipython==8.15.0"
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["holy_grail_ib"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=holy_grail_ib --cov-report=term-missing"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["holy_grail_ib"]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "**/migrations/*",
    "**/setup.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
